Updated container height to auto and fixed issues with submit button not appearing on contact page, when in a mobile display. Also aligned text to center for h3 tags on portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ body {
 /*Style for content div on index.html page for about me section */
 .container {
     width: 960px; 
-    height: 400px; 
+    height: auto; 
     margin: auto; 
     background-color: #ffffff;
     text-align: left;
@@ -189,12 +189,13 @@ h2 {
   margin:0; 
   padding: 0; 
   width: 960px; 
-  height: 800px; 
+  height: auto;  
   background-color: #ffffff;
   border: solid #cccccc 2px; 
   border-radius: 5px;
   margin-top: 120px; 
   float: left; 
+  margin-bottom: 80px; 
  
 }
 
@@ -286,6 +287,7 @@ h3 {
     position: relative; 
     top: -55px; 
     width: 200px; 
+    text-align: center;
   }
  
 
